# simple-calulator-dbus

./: CMakeLists.txt
inc/: CalculatorStubImpl.h
src/: CalculatorStubImpl.cpp
src-gen/v1/SimpleCalculator/CalculatorInterface/: CalculatorDBusDeployment.hpp  CalculatorDBusProxy.cpp  CalculatorDBusProxy.hpp  CalculatorDBusStubAdapter.hpp  CalculatorStubDefault.cpp
test_suite/CalculatorClient/: CMakeLists.txt
test_suite/CalculatorClient/src/: CalculatorClient.cpp
